--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-server",
   "engines": {
     "node": "16.15.0",
-    "npm": "8.5.5",
+    "npm": "8.5.5"
   },
   "version": "1.0.0",
   "description": "",
